2005-10-27  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_class_init),
	(hash_value_destroy), (gnl_composition_init),
	(gnl_composition_dispose), (gnl_composition_finalize),
	(objects_start_compare), (objects_stop_compare),
	(update_start_stop_duration), (object_start_changed),
	(object_stop_changed), (object_priority_changed),
	(object_active_changed), (gnl_composition_add_object),
	(gnl_composition_remove_object):
	* gnl/gnlcomposition.h:
	Initial Cleanup
	Added new threadsafe way of handling objects

	* gnl/gnlobject.c: (gnl_object_base_init), (gnl_object_class_init),
	(gnl_object_init), (gnl_object_prepare_func), (gnl_object_prepare),
	(gnl_object_release_pad), (translate_incoming_seek),
	(translate_outgoing_newsegment), (update_values),
	(gnl_object_set_property), (gnl_object_get_property),
	(gnl_object_change_state):
	* gnl/gnlobject.h:
	stop position for object and media are now read-only
	Added read/write duration for object and media
	Saner event time modifications
	Added GstObjectFlags for GnlObject for figuring out if the object is a
	source or an operation
	Re-added prepare virtual method, still have to see if it's useful, I'd
	prefer to avoid using it...
	* gnl/gnlsource.c: (gnl_source_class_init), (gnl_source_init),
	(gnl_source_dispose), (gnl_source_finalize),
	(no_more_pads_in_child), (gnl_source_remove_element):
	* gnl/gnlsource.h:
	Cleanups and proper finalize

2005-10-25  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlobject.c: (gnl_object_base_init), (gnl_object_class_init),
	(gnl_object_init), (gnl_object_to_media_time),
	(gnl_media_to_object_time), (gnl_object_covers_func),
	(gnl_object_covers), (gnl_object_release_pad),
	(translate_incoming_seek), (translate_outgoing_seek),
	(translate_outgoing_newsegment), (internalpad_event_function),
	(internalpad_query_function), (ghostpad_event_function),
	(ghostpad_query_function), (control_internal_pad),
	(ghostpad_link_function), (ghostpad_unlink_function),